--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -36,7 +36,7 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest, macos-latest, ubuntu-latest]
-    runs-on: windows-latest
+    runs-on: ${{ matrix.os }}
     needs: [scan]
     steps:
       - uses: actions/checkout@v3
