--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -14,21 +14,18 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Download libpens
-        env:
-          PEN_FILE_SERVER: ${{secrets.PEN_FILE_SERVER}}
-        run: .github/bin/ftp_tool.sh -d
       - name: Install sonar-scanner and build-wrapper
         uses: SonarSource/sonarcloud-github-c-cpp@v1
       - name: Run build-wrapper
+        env:
+          PEN_FILE_SERVER: ${{secrets.PEN_FILE_SERVER}}
         run: |
-          mkdir build
-          cmake -S . -B build -DPEN_LIBRARY_PATH=${GITHUB_WORKSPACE}/libpen -DCMAKE_BUILD_TYPE=Release
-          build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} cmake --build build/ --config Release
+          cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
+          build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} cmake --build build
       - name: Run sonar-scanner
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONARCLOUD_TOKEN }} # Put the name of your token here
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }} # Put the name of your token here
         run: |
           sonar-scanner --define sonar.cfamily.build-wrapper-output="${{ env.BUILD_WRAPPER_OUT_DIR }}"
 
@@ -41,27 +38,19 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Prepare
-        env:
-          PEN_FILE_SERVER: ${{secrets.PEN_FILE_SERVER}}
-        run: .github/bin/ftp_tool.sh -d
-        shell: bash
-
       - name: Add MSBuild to PATH
         if: matrix.os == 'windows-latest'
         uses: microsoft/setup-msbuild@v1.1.3
 
       - name: Build
+        env:
+          PEN_FILE_SERVER: ${{secrets.PEN_FILE_SERVER}}
         run: .github/bin/build.sh
-        shell: bash
-
-      - name: Pack
-        run: .github/bin/pack.sh
         shell: bash
 
       - name: Deploy
         env:
           UPLOAD_SECRET: ${{secrets.UPLOAD_SECRET}}
           PEN_FILE_SERVER: ${{secrets.PEN_FILE_SERVER}}
-        run: .github/bin/ftp_tool.sh -u
+        run: cmake --build build --target upload
         shell: bash
