--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -4,8 +4,7 @@ set(LOCAL_FILES
     client.c
     connector.c
     main.c
-    client.h
-    connector.h
+    common.h
 )
 target_sources(pen_proxy PRIVATE ${LOCAL_FILES})
 
